RESOLVED FIXED136440
DrawingAreaProxy and friends can hold on to WebPageProxy by reference
https://bugs.webkit.org/show_bug.cgi?id=136440
Summary DrawingAreaProxy and friends can hold on to WebPageProxy by reference
Tim Horton
Reported 2014-09-01 15:52:58 PDT
DrawingAreaProxy and friends can hold on to WebPageProxy by reference
Attachments
Patch (26.92 KB, patch)
2014-09-01 15:53 PDT, Tim Horton
mitz: review+
Tim Horton
Comment 1 2014-09-01 15:53:32 PDT
WebKit Commit Bot
Comment 2 2014-09-01 15:55:25 PDT
Attachment 237468 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/RemoteLayerTreeDrawingAreaProxy.mm:269: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2014-09-01 16:04:37 PDT
Note You need to log in before you can comment on or make changes to this bug.